@@ -2,6 +2,9 @@
 
 SimGrid (3.29.1) NOT RELEASED YET (v3.30 expected December 21. 2021, 15:59 UTC)
 
+Engine:
+ - New function: run_until(date) allowing to split the simulation.
+
 SMPI:
  - Dynamic costs for MPI operations: New API to allow users to dynamically
  change injected costs for MPI_Recv, MPI_Send and MPI_Isend operations.
